--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,21 +8,21 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
-                "-L.",
-                "-lhashtable",
-                // "src/addhashnode.c",
-                // "src/crthashatable.c",
-                // "src/crthashnode.c",
-                // "src/findhashnode.c",
-                // "src/gethashval.c",
-                // "src/hashfunction.c",
-                // "src/rehash.c",
-                // "src/removehashnode.c",
-                // "src/resize.c",
-                // "-LNearestPrime",
-                // "-lgetnearprime",
-                // "-LNearestPrime/libft",
-                // "-lft",
+                "src/addhashnode.c",
+                "src/crthashatable.c",
+                "src/crthashnode.c",
+                "src/findhashnode.c",
+                "src/gethashval.c",
+                "src/hashfunction.c",
+                "src/rehash.c",
+                "src/removehashnode.c",
+                "src/resize.c",
+                "src/seters_hash_table.c",
+                "src/crt_hash_table.c",
+                "src/geters_hash_table.c",
+                "src/get_key_vravalue.c",
+                "-LNearestPrime",
+                "-lgetnearprimefull",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
